--- a/Tracktify/Info.plist
+++ b/Tracktify/Info.plist
@@ -23,5 +23,16 @@
 	<array>
 		<string>spotify</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>LeagueSpartan-SemiBold.ttf</string>
+		<string>LeagueSpartan-Black.ttf</string>
+		<string>LeagueSpartan-Bold.ttf</string>
+		<string>LeagueSpartan-ExtraBold.ttf</string>
+		<string>LeagueSpartan-ExtraLight.ttf</string>
+		<string>LeagueSpartan-Light.ttf</string>
+		<string>LeagueSpartan-Medium.ttf</string>
+		<string>LeagueSpartan-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
